Restoring Database as free tier was suspended. changed some files as of nextJS updates, changes in globals.css as some issues related to design and shifted to latest nextJS version.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,22 +34,7 @@
   filter: invert(1);
 }
 body {
-  background-color: rgb(2, 28, 28);
-}
-
-.gradient {
-  height: fit-content;
-  z-index: 3;
-  width: 100%;
-  max-width: 640px;
-  background-color: rgb(2, 28, 28);
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  filter: blur(100px) saturate(150%);
-  top: 80px;
-  opacity: 0.15;
+  background-color: #5d20d3;
 }
 
 @media screen and (max-width: 640px) {
@@ -65,19 +50,21 @@ body {
 }
 
 .black_btn {
-  @apply rounded-full border border-black bg-green-400 py-1.5 px-5 text-black transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full  bg-green-400 py-1.5 px-5 text-black transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
 }
 
 .outline_btn {
-  @apply rounded-full border border-black bg-transparent py-1.5 px-5 bg-green-500 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full bg-transparent py-1.5 px-5 bg-green-400 text-black transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
 }
 
 .head_text {
   @apply mt-5 text-5xl font-extrabold leading-[1.15] sm:text-6xl;
 }
 
+/* These are for edit and delete button in our profile page it was updated on 15/09/2023*/
+
 .orange_gradient {
-  @apply bg-gradient-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
+  @apply bg-gradient-to-r from-amber-500 via-orange-700 to-yellow-500 bg-clip-text text-transparent;
 }
 
 .green_gradient {
@@ -85,7 +72,7 @@ body {
 }
 
 .desc {
-  @apply mt-5 text-lg text-gray-300 sm:text-xl max-w-2xl;
+  @apply mt-5 text-lg text-white sm:text-xl max-w-2xl;
 }
 
 .search_input {
@@ -93,11 +80,11 @@ body {
 }
 
 .copy_btn {
-  @apply w-7 h-7 rounded-full  bg-green-300 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur flex justify-center items-center cursor-pointer;
+  @apply w-7 h-7 rounded-full  bg-yellow-100 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur flex justify-center items-center cursor-pointer;
 }
 
 .glassmorphism {
-  @apply rounded-xl border border-gray-200 bg-white/20 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur p-5;
+  @apply rounded-xl border border-zinc-300 bg-[#6834d4] shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.1)] backdrop-blur p-5;
 }
 
 .prompt_layout {
